# rent-prediction

./: README.md  apartment_rent_school_work.ipynb  environment.yml  prediction_model.ipynb  pyproject.toml
huggingface_app/: app.py
huggingface_app/models/: mappings.joblib  preprocessor.joblib  target_encoder.joblib
models/: convolutional_neural_network.keras  multilayer_perceptron.keras  preprocessor.joblib
notebooks/: neural_networks.ipynb  xgboost_model.ipynb
rent/: prediction_rent_cnn.keras  prediction_rent_school.keras
scripts/: train_pipeline.py
src/: __init__.py  config.py
src/api/: dependencies.py  exceptions.py  main.py  schemas.py
src/api/routes/: __init__.py  health.py  prediction.py
src/data/: __init__.py  loader.py  preprocessing.py
src/evaluation/: metrics.py
src/models/: __init__.py  predict.py  train.py
